--- a/index.html
+++ b/index.html
@@ -3,39 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub Pages 公開手順</title>
+    <title>PCをモニターにして、スイッチをする手順</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>GitHub Pages 公開手順</h1>
+        <h1>PCをモニターにして、スイッチをする手順</h1>
     </header>
     <main>
         <section id="introduction">
             <h2>はじめに</h2>
-            <p>GitHub Pagesを使用して、静的サイトを簡単に公開する方法を説明します。</p>
+            <p>PCをモニターにして、スイッチをする手順を紹介します。</p>
         </section>
         <section id="steps">
             <h2>手順</h2>
             <ol>
                 <li>
-                    <h3>リポジトリを作成</h3>
-                    <p>GitHubにログインし、新しいリポジトリを作成します。</p>
-                    <img src="images/create-repo.png" alt="リポジトリ作成画面">
+                    <h3>必要なもの</h3>
+                    <p>・スイッチ(ライト不可)・ドッグ・ACアダプター・HDMIケーブル・キャプチャーボード・PC</p>
+                    <img src="images/create-repo.png" alt="必要なもの">
                 </li>
                 <li>
-                    <h3>ファイルを追加</h3>
-                    <p>リポジトリにHTML、CSS、JavaScriptファイルを追加します。</p>
-                    <img src="images/add-files.png" alt="ファイル追加画面">
+                    <h3>PCに接続</h3>
+                    <p>ドックに、電源、スイッチ、HDMIケーブルをつなげ、その反対のHDMIの先端に送付したキャプチャーボードをつなげます。</p>
+                    <img src="images/add-files.png" alt="接続画面">
                 </li>
                 <li>
-                    <h3>GitHub Pagesを設定</h3>
-                    <p>リポジトリの設定ページに移動し、GitHub Pagesセクションを見つけて、Branchを選択して保存します。</p>
+                    <h3>OBS studioをインストール</h3>
+                    <p>OBS Studioをこのサイト(https://x.gd/1Qq9B )からダウンロードし、ファイルを開き、手順(ファイルの)に沿ってインストールする。</p>
+                    <img src="images/enable-pages.png" alt="インストール画面">
+                </li>
+                <li>
+                    <h3>OBS studioの設定</h3>
+                    <p>OBS Studioを開き、</p>
                     <img src="images/enable-pages.png" alt="GitHub Pages設定画面">
-                </li>
-                <li>
-                    <h3>公開されたサイトを確認</h3>
-                    <p>設定が保存されると、リポジトリのURLでサイトが公開されます。</p>
                 </li>
             </ol>
         </section>
